// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Card Should render UI with ar language 1`] = `
<div>
  <div
    class="rt-Box"
  >
    <div
      class="rt-Container rt-r-size-1"
    >
      <div
        class="rt-ContainerInner"
      >
        <div
          class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface"
        >
          <form>
            <div
              class="rt-Flex rt-r-fd-column rt-r-rg-4"
            >
              <h1
                class="rt-Heading rt-r-size-6"
              >
                التسجيل
              </h1>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  اسم المستخدم
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="أدخل اسم المستخدم"
                    class="rt-reset rt-TextFieldInput"
                    name="username"
                    placeholder="أدخل اسم المستخدم"
                    spellcheck="false"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 0.875C5.49797 0.875 3.875 2.49797 3.875 4.5C3.875 6.15288 4.98124 7.54738 6.49373 7.98351C5.2997 8.12901 4.27557 8.55134 3.50407 9.31167C2.52216 10.2794 2.02502 11.72 2.02502 13.5999C2.02502 13.8623 2.23769 14.0749 2.50002 14.0749C2.76236 14.0749 2.97502 13.8623 2.97502 13.5999C2.97502 11.8799 3.42786 10.7206 4.17091 9.9883C4.91536 9.25463 6.02674 8.87499 7.49995 8.87499C8.97317 8.87499 10.0846 9.25463 10.8291 9.98831C11.5721 10.7206 12.025 11.8799 12.025 13.5999C12.025 13.8623 12.2376 14.0749 12.5 14.0749C12.7623 14.075 12.975 13.8623 12.975 13.6C12.975 11.72 12.4778 10.2794 11.4959 9.31166C10.7244 8.55135 9.70025 8.12903 8.50625 7.98352C10.0187 7.5474 11.125 6.15289 11.125 4.5C11.125 2.49797 9.50203 0.875 7.5 0.875ZM4.825 4.5C4.825 3.02264 6.02264 1.825 7.5 1.825C8.97736 1.825 10.175 3.02264 10.175 4.5C10.175 5.97736 8.97736 7.175 7.5 7.175C6.02264 7.175 4.825 5.97736 4.825 4.5Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  كلمة المرور
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="أدخل كلمة المرور"
                    class="rt-reset rt-TextFieldInput"
                    name="password"
                    placeholder="أدخل كلمة المرور"
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                تأكيد كلمة المرور
                <span
                  class="rt-Text"
                />
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    class="rt-reset rt-TextFieldInput"
                    name="confirm_password"
                    placeholder="أكد كلمة المرور الخاصة بك..."
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-high-contrast rt-Button"
                data-accent-color=""
                type="submit"
              >
                سجل
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signup Card Should render UI with en language 1`] = `
<div>
  <div
    class="rt-Box"
  >
    <div
      class="rt-Container rt-r-size-1"
    >
      <div
        class="rt-ContainerInner"
      >
        <div
          class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface"
        >
          <form>
            <div
              class="rt-Flex rt-r-fd-column rt-r-rg-4"
            >
              <h1
                class="rt-Heading rt-r-size-6"
              >
                Signup
              </h1>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Username
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Enter your username"
                    class="rt-reset rt-TextFieldInput"
                    name="username"
                    placeholder="Enter your username"
                    spellcheck="false"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 0.875C5.49797 0.875 3.875 2.49797 3.875 4.5C3.875 6.15288 4.98124 7.54738 6.49373 7.98351C5.2997 8.12901 4.27557 8.55134 3.50407 9.31167C2.52216 10.2794 2.02502 11.72 2.02502 13.5999C2.02502 13.8623 2.23769 14.0749 2.50002 14.0749C2.76236 14.0749 2.97502 13.8623 2.97502 13.5999C2.97502 11.8799 3.42786 10.7206 4.17091 9.9883C4.91536 9.25463 6.02674 8.87499 7.49995 8.87499C8.97317 8.87499 10.0846 9.25463 10.8291 9.98831C11.5721 10.7206 12.025 11.8799 12.025 13.5999C12.025 13.8623 12.2376 14.0749 12.5 14.0749C12.7623 14.075 12.975 13.8623 12.975 13.6C12.975 11.72 12.4778 10.2794 11.4959 9.31166C10.7244 8.55135 9.70025 8.12903 8.50625 7.98352C10.0187 7.5474 11.125 6.15289 11.125 4.5C11.125 2.49797 9.50203 0.875 7.5 0.875ZM4.825 4.5C4.825 3.02264 6.02264 1.825 7.5 1.825C8.97736 1.825 10.175 3.02264 10.175 4.5C10.175 5.97736 8.97736 7.175 7.5 7.175C6.02264 7.175 4.825 5.97736 4.825 4.5Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Password
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Enter your password"
                    class="rt-reset rt-TextFieldInput"
                    name="password"
                    placeholder="Enter your password"
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                Confirm password
                <span
                  class="rt-Text"
                />
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    class="rt-reset rt-TextFieldInput"
                    name="confirm_password"
                    placeholder="Confirm your password..."
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-high-contrast rt-Button"
                data-accent-color=""
                type="submit"
              >
                Sign Up
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signup Card Should render UI with es language 1`] = `
<div>
  <div
    class="rt-Box"
  >
    <div
      class="rt-Container rt-r-size-1"
    >
      <div
        class="rt-ContainerInner"
      >
        <div
          class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface"
        >
          <form>
            <div
              class="rt-Flex rt-r-fd-column rt-r-rg-4"
            >
              <h1
                class="rt-Heading rt-r-size-6"
              >
                Registro
              </h1>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Nombre de usuario
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Ingrese su nombre de usuario"
                    class="rt-reset rt-TextFieldInput"
                    name="username"
                    placeholder="Ingrese su nombre de usuario"
                    spellcheck="false"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 0.875C5.49797 0.875 3.875 2.49797 3.875 4.5C3.875 6.15288 4.98124 7.54738 6.49373 7.98351C5.2997 8.12901 4.27557 8.55134 3.50407 9.31167C2.52216 10.2794 2.02502 11.72 2.02502 13.5999C2.02502 13.8623 2.23769 14.0749 2.50002 14.0749C2.76236 14.0749 2.97502 13.8623 2.97502 13.5999C2.97502 11.8799 3.42786 10.7206 4.17091 9.9883C4.91536 9.25463 6.02674 8.87499 7.49995 8.87499C8.97317 8.87499 10.0846 9.25463 10.8291 9.98831C11.5721 10.7206 12.025 11.8799 12.025 13.5999C12.025 13.8623 12.2376 14.0749 12.5 14.0749C12.7623 14.075 12.975 13.8623 12.975 13.6C12.975 11.72 12.4778 10.2794 11.4959 9.31166C10.7244 8.55135 9.70025 8.12903 8.50625 7.98352C10.0187 7.5474 11.125 6.15289 11.125 4.5C11.125 2.49797 9.50203 0.875 7.5 0.875ZM4.825 4.5C4.825 3.02264 6.02264 1.825 7.5 1.825C8.97736 1.825 10.175 3.02264 10.175 4.5C10.175 5.97736 8.97736 7.175 7.5 7.175C6.02264 7.175 4.825 5.97736 4.825 4.5Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Contraseña
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Ingrese su contraseña"
                    class="rt-reset rt-TextFieldInput"
                    name="password"
                    placeholder="Ingrese su contraseña"
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                Confirmar contraseña
                <span
                  class="rt-Text"
                />
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    class="rt-reset rt-TextFieldInput"
                    name="confirm_password"
                    placeholder="Confirme su contraseña..."
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-high-contrast rt-Button"
                data-accent-color=""
                type="submit"
              >
                Regístrate
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signup Card Should render UI with ru language 1`] = `
<div>
  <div
    class="rt-Box"
  >
    <div
      class="rt-Container rt-r-size-1"
    >
      <div
        class="rt-ContainerInner"
      >
        <div
          class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface"
        >
          <form>
            <div
              class="rt-Flex rt-r-fd-column rt-r-rg-4"
            >
              <h1
                class="rt-Heading rt-r-size-6"
              >
                Регистрация
              </h1>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Имя пользователя
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Введите имя пользователя"
                    class="rt-reset rt-TextFieldInput"
                    name="username"
                    placeholder="Введите имя пользователя"
                    spellcheck="false"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 0.875C5.49797 0.875 3.875 2.49797 3.875 4.5C3.875 6.15288 4.98124 7.54738 6.49373 7.98351C5.2997 8.12901 4.27557 8.55134 3.50407 9.31167C2.52216 10.2794 2.02502 11.72 2.02502 13.5999C2.02502 13.8623 2.23769 14.0749 2.50002 14.0749C2.76236 14.0749 2.97502 13.8623 2.97502 13.5999C2.97502 11.8799 3.42786 10.7206 4.17091 9.9883C4.91536 9.25463 6.02674 8.87499 7.49995 8.87499C8.97317 8.87499 10.0846 9.25463 10.8291 9.98831C11.5721 10.7206 12.025 11.8799 12.025 13.5999C12.025 13.8623 12.2376 14.0749 12.5 14.0749C12.7623 14.075 12.975 13.8623 12.975 13.6C12.975 11.72 12.4778 10.2794 11.4959 9.31166C10.7244 8.55135 9.70025 8.12903 8.50625 7.98352C10.0187 7.5474 11.125 6.15289 11.125 4.5C11.125 2.49797 9.50203 0.875 7.5 0.875ZM4.825 4.5C4.825 3.02264 6.02264 1.825 7.5 1.825C8.97736 1.825 10.175 3.02264 10.175 4.5C10.175 5.97736 8.97736 7.175 7.5 7.175C6.02264 7.175 4.825 5.97736 4.825 4.5Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  Пароль
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="Введите ваш пароль"
                    class="rt-reset rt-TextFieldInput"
                    name="password"
                    placeholder="Введите ваш пароль"
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                Подтвердите пароль
                <span
                  class="rt-Text"
                />
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    class="rt-reset rt-TextFieldInput"
                    name="confirm_password"
                    placeholder="Подтвердите ваш пароль..."
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-high-contrast rt-Button"
                data-accent-color=""
                type="submit"
              >
                Зарегистрироваться
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Signup Card Should render UI with zh language 1`] = `
<div>
  <div
    class="rt-Box"
  >
    <div
      class="rt-Container rt-r-size-1"
    >
      <div
        class="rt-ContainerInner"
      >
        <div
          class="rt-reset rt-BaseCard rt-Card rt-r-size-1 rt-variant-surface"
        >
          <form>
            <div
              class="rt-Flex rt-r-fd-column rt-r-rg-4"
            >
              <h1
                class="rt-Heading rt-r-size-6"
              >
                注册
              </h1>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  用户名
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="输入您的用户名"
                    class="rt-reset rt-TextFieldInput"
                    name="username"
                    placeholder="输入您的用户名"
                    spellcheck="false"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 0.875C5.49797 0.875 3.875 2.49797 3.875 4.5C3.875 6.15288 4.98124 7.54738 6.49373 7.98351C5.2997 8.12901 4.27557 8.55134 3.50407 9.31167C2.52216 10.2794 2.02502 11.72 2.02502 13.5999C2.02502 13.8623 2.23769 14.0749 2.50002 14.0749C2.76236 14.0749 2.97502 13.8623 2.97502 13.5999C2.97502 11.8799 3.42786 10.7206 4.17091 9.9883C4.91536 9.25463 6.02674 8.87499 7.49995 8.87499C8.97317 8.87499 10.0846 9.25463 10.8291 9.98831C11.5721 10.7206 12.025 11.8799 12.025 13.5999C12.025 13.8623 12.2376 14.0749 12.5 14.0749C12.7623 14.075 12.975 13.8623 12.975 13.6C12.975 11.72 12.4778 10.2794 11.4959 9.31166C10.7244 8.55135 9.70025 8.12903 8.50625 7.98352C10.0187 7.5474 11.125 6.15289 11.125 4.5C11.125 2.49797 9.50203 0.875 7.5 0.875ZM4.825 4.5C4.825 3.02264 6.02264 1.825 7.5 1.825C8.97736 1.825 10.175 3.02264 10.175 4.5C10.175 5.97736 8.97736 7.175 7.5 7.175C6.02264 7.175 4.825 5.97736 4.825 4.5Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                <span
                  class="rt-Text"
                >
                  密码
                </span>
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    aria-label="输入您的密码"
                    class="rt-reset rt-TextFieldInput"
                    name="password"
                    placeholder="输入您的密码"
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="rt-Box"
              >
                确认密码
                <span
                  class="rt-Text"
                />
                <div
                  class="rt-TextFieldRoot rt-r-size-2 rt-variant-surface"
                >
                  <input
                    class="rt-reset rt-TextFieldInput"
                    name="confirm_password"
                    placeholder="确认您的密码..."
                    spellcheck="false"
                    type="password"
                  />
                  <div
                    class="rt-TextFieldSlot"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 4.63601C5 3.76031 5.24219 3.1054 5.64323 2.67357C6.03934 2.24705 6.64582 1.9783 7.5014 1.9783C8.35745 1.9783 8.96306 2.24652 9.35823 2.67208C9.75838 3.10299 10 3.75708 10 4.63325V5.99999H5V4.63601ZM4 5.99999V4.63601C4 3.58148 4.29339 2.65754 4.91049 1.99307C5.53252 1.32329 6.42675 0.978302 7.5014 0.978302C8.57583 0.978302 9.46952 1.32233 10.091 1.99162C10.7076 2.65557 11 3.57896 11 4.63325V5.99999H12C12.5523 5.99999 13 6.44771 13 6.99999V13C13 13.5523 12.5523 14 12 14H3C2.44772 14 2 13.5523 2 13V6.99999C2 6.44771 2.44772 5.99999 3 5.99999H4ZM3 6.99999H12V13H3V6.99999Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="rt-reset rt-BaseButton rt-r-size-2 rt-variant-solid rt-high-contrast rt-Button"
                data-accent-color=""
                type="submit"
              >
                注册
                <svg
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
